--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Russia_1349
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Wallace, Donald Mackenzie
@@ -10,6 +13,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/614
     wikipedia: http://en.wikipedia.org/wiki/Donald_Mackenzie_Wallace
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/1349#Russia
 gutenberg_issued: '2006-05-03'
 gutenberg_type: Text
 identifiers:
